Fixed content overlapping on some mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -322,6 +322,8 @@ footer {
   }
 
   main {
+    height: max-content;
+    grid-template-rows: max-content;
     grid-template-areas: "btns btns" "img img" "text text";
   }
   main img {
